--- a/10/style.css
+++ b/10/style.css
@@ -3,28 +3,63 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+/* 
 .child {
-  background-color: aqua;
-  /* height: 40px; */
-  margin: 10px;
-}
-
+  background-color: aqua; */
+/* height: 40px; */
+/* margin: 10px;
+} */
+/* 
 .container {
   display: grid;
   background-color: rgb(233, 106, 233);
-  height: 700px;
+  height: 700px; */
 
-  /* grid */
-  gap: 10px;
+/* grid */
+/* gap: 10px;
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: repeat(4, 1fr);
+} */
+
+/* #last { */
+/* grid-column: 1 / 4;
+  grid-row: 1 / 3; */
+
+/* align-self: center;
+  justify-self: end;
+} */
+
+body {
+  text-align: center;
+}
+
+.child {
+  background-color: aqua;
+  /* width: 100px;
+  height: 100px; */
+}
+
+.container {
+  background-color: rgb(241, 10, 241);
+  height: 700px;
+  padding: 10px;
+
+  /* Grid */
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  /* repeat(3, 1fr) */
+  /* grid-template-rows: 100px auto 100px; */
+
+  /* gap */
+  gap: 20px;
 }
 
 #last {
-  /* grid-column: 1 / 4;
-  grid-row: 1 / 3; */
-
-  align-self: center;
-  justify-self: end;
+  background-color: black;
+  border-radius: 10px;
+  color: white;
+  /* align-self: center;
+  justify-self: end; */
 }
+
+/* align-content && justify-content */
